# little-guy

./: .env.template  Dockerfile  README.md  formantFilter.pd  main.py  marcelVPDTest.pd  pyproject.toml  referenceMaterials.txt
audio_processing/: __init__.py  listen.py  speak.py
utils/: __init__.py  ollama.py  ssh_tunnel.py
