[tool.poetry]
name = "little-guys"
version = "0.1.0"
description = ""
authors = ["nworb999 <emma.nworb@gmail.com>"]
license = "CC BY-SA 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
python-osc = "^1.8.3"
tensorflow = "2.15.0"
tensorflow-io-gcs-filesystem = "0.34.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
